--- a/people/index.html
+++ b/people/index.html
@@ -93,23 +93,12 @@
                 </picture>
               </figure>
             </div>
-            <div class="clearfix">
-              <p>Write your biography here. Tell the world about yourself. Link to your favorite <a
-                  href="http://reddit.com" rel="external nofollow noopener" target="_blank">subreddit</a>. You can put a
-                picture in, too. The code is already in, just name your picture <code
-                  class="language-plaintext highlighter-rouge">prof_pic.jpg</code> and put it in the <code
-                  class="language-plaintext highlighter-rouge">img/</code> folder.</p>
-              <p>Put your address / P.O. box / other info right below your picture. You can also disable any these
-                elements by editing <code class="language-plaintext highlighter-rouge">profile</code> property of the
-                YAML header of your <code class="language-plaintext highlighter-rouge">_pages/about.md</code>. Edit
-                <code class="language-plaintext highlighter-rouge">_bibliography/papers.bib</code> and Jekyll will
-                render your <a href="/al-folio/publications/">publications page</a> automatically.
-              </p>
-              <p>Link to your social media connections, too. This theme is set up to use <a
-                  href="https://fontawesome.com/" rel="external nofollow noopener" target="_blank">Font Awesome
-                  icons</a> and <a href="https://jpswalsh.github.io/academicons/" rel="external nofollow noopener"
-                  target="_blank">Academicons</a>, like the ones below. Add your Facebook, Twitter, LinkedIn, Google
-                Scholar, or just disable all of them.</p>
+            <div class="clearfix" style="font-size: 1rem; line-height: 1rem; margin-top: 30px;">
+              <p style="font-size: 2rem; margin-bottom: 30px;"><strong>Jaeyeon Lee</strong></p>
+                <p>Assistant Professor</p>
+                <p>Email: jaeyeonlee@unist.ac.kr</p>
+                <!-- <p>Tel: +82-52-217-2281</p>
+                <p>Office: Engineering Building III (106) #801-6</p> -->
             </div>
             <hr>
             <div class="profile float-left">
@@ -124,23 +113,10 @@
                 </picture>
               </figure>
             </div>
-            <div class="clearfix">
-              <p>Write your biography here. Tell the world about yourself. Link to your favorite <a
-                  href="http://reddit.com" rel="external nofollow noopener" target="_blank">subreddit</a>. You can put a
-                picture in, too. The code is already in, just name your picture <code
-                  class="language-plaintext highlighter-rouge">prof_pic.jpg</code> and put it in the <code
-                  class="language-plaintext highlighter-rouge">img/</code> folder.</p>
-              <p>Put your address / P.O. box / other info right below your picture. You can also disable any these
-                elements by editing <code class="language-plaintext highlighter-rouge">profile</code> property of the
-                YAML header of your <code class="language-plaintext highlighter-rouge">_pages/about.md</code>. Edit
-                <code class="language-plaintext highlighter-rouge">_bibliography/papers.bib</code> and Jekyll will
-                render your <a href="/al-folio/publications/">publications page</a> automatically.
-              </p>
-              <p>Link to your social media connections, too. This theme is set up to use <a
-                  href="https://fontawesome.com/" rel="external nofollow noopener" target="_blank">Font Awesome
-                  icons</a> and <a href="https://jpswalsh.github.io/academicons/" rel="external nofollow noopener"
-                  target="_blank">Academicons</a>, like the ones below. Add your Facebook, Twitter, LinkedIn, Google
-                Scholar, or just disable all of them.</p>
+            <div class="clearfix" style="font-size: 1rem; line-height: 1rem; margin-top: 30px;">
+              <p style="font-size: 2rem; margin-bottom: 30px;"><strong>Sanghyun Bae</strong></p>
+                <p>Master Student</p>
+                <p>Email: nshbae@unist.ac.kr</p>
             </div>
             <hr>
             <div class="profile float-right">
@@ -155,23 +131,10 @@
                 </picture>
               </figure>
             </div>
-            <div class="clearfix">
-              <p>Write your biography here. Tell the world about yourself. Link to your favorite <a
-                  href="http://reddit.com" rel="external nofollow noopener" target="_blank">subreddit</a>. You can put a
-                picture in, too. The code is already in, just name your picture <code
-                  class="language-plaintext highlighter-rouge">prof_pic.jpg</code> and put it in the <code
-                  class="language-plaintext highlighter-rouge">img/</code> folder.</p>
-              <p>Put your address / P.O. box / other info right below your picture. You can also disable any these
-                elements by editing <code class="language-plaintext highlighter-rouge">profile</code> property of the
-                YAML header of your <code class="language-plaintext highlighter-rouge">_pages/about.md</code>. Edit
-                <code class="language-plaintext highlighter-rouge">_bibliography/papers.bib</code> and Jekyll will
-                render your <a href="/al-folio/publications/">publications page</a> automatically.
-              </p>
-              <p>Link to your social media connections, too. This theme is set up to use <a
-                  href="https://fontawesome.com/" rel="external nofollow noopener" target="_blank">Font Awesome
-                  icons</a> and <a href="https://jpswalsh.github.io/academicons/" rel="external nofollow noopener"
-                  target="_blank">Academicons</a>, like the ones below. Add your Facebook, Twitter, LinkedIn, Google
-                Scholar, or just disable all of them.</p>
+            <div class="clearfix" style="font-size: 1rem; line-height: 1rem; margin-top: 30px;">
+              <p style="font-size: 2rem; margin-bottom: 30px;"><strong>Sungwoo Kang</strong></p>
+                <p>Master Student</p>
+                <p>Email: joseph316@unist.ac.kr</p>
             </div>
             <hr>
             <div class="profile float-left">
@@ -186,23 +149,10 @@
                 </picture>
               </figure>
             </div>
-            <div class="clearfix">
-              <p>Write your biography here. Tell the world about yourself. Link to your favorite <a
-                  href="http://reddit.com" rel="external nofollow noopener" target="_blank">subreddit</a>. You can put a
-                picture in, too. The code is already in, just name your picture <code
-                  class="language-plaintext highlighter-rouge">prof_pic.jpg</code> and put it in the <code
-                  class="language-plaintext highlighter-rouge">img/</code> folder.</p>
-              <p>Put your address / P.O. box / other info right below your picture. You can also disable any these
-                elements by editing <code class="language-plaintext highlighter-rouge">profile</code> property of the
-                YAML header of your <code class="language-plaintext highlighter-rouge">_pages/about.md</code>. Edit
-                <code class="language-plaintext highlighter-rouge">_bibliography/papers.bib</code> and Jekyll will
-                render your <a href="/al-folio/publications/">publications page</a> automatically.
-              </p>
-              <p>Link to your social media connections, too. This theme is set up to use <a
-                  href="https://fontawesome.com/" rel="external nofollow noopener" target="_blank">Font Awesome
-                  icons</a> and <a href="https://jpswalsh.github.io/academicons/" rel="external nofollow noopener"
-                  target="_blank">Academicons</a>, like the ones below. Add your Facebook, Twitter, LinkedIn, Google
-                Scholar, or just disable all of them.</p>
+            <div class="clearfix" style="font-size: 1rem; line-height: 1rem; margin-top: 30px;">
+              <p style="font-size: 2rem; margin-bottom: 30px;"><strong>Junsu Lee</strong></p>
+                <p>Undergraduate Student</p>
+                <p>Email: linak31413@unist.ac.kr</p>
             </div>
           </article>
         </div>
