--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <!-- li class="nav-item "> <a class="nav-link" href="/teaching/">teaching </a> </li -->
             <li class="nav-item "> <a class="nav-link" href="/people/">people </a> </li>
             <li class="nav-item "> <a class="nav-link" href="/facility/">facility </a> </li>
+            <li class="nav-item "> <a class="nav-link" href="/opportunity/">opportunity </a> </li>
             <!--li class="nav-item dropdown "> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">submenus </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown"> <a class="dropdown-item "
